--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   "homepage": "https://github.com/electron/electron-quick-start#readme",
   "devDependencies": {
     "electron-prebuilt": "^0.37.0"
+  },
+  "dependencies": {
+    "node-printer": "^1.0.2"
   }
 }
