--- a/package.json
+++ b/package.json
@@ -1,27 +1,17 @@
 {
-  "name": "electron-quick-start",
+  "name": "eshop-desktip",
   "version": "1.0.0",
-  "description": "A minimal Electron application",
+  "description": "desktop application for desktop",
   "main": "main.js",
   "scripts": {
     "start": "electron main.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/electron/electron-quick-start.git"
+    "url": "https://github.com/enhuizhu/eshopDesktop.git"
   },
-  "keywords": [
-    "Electron",
-    "quick",
-    "start",
-    "tutorial"
-  ],
-  "author": "GitHub",
-  "license": "CC0-1.0",
-  "bugs": {
-    "url": "https://github.com/electron/electron-quick-start/issues"
-  },
-  "homepage": "https://github.com/electron/electron-quick-start#readme",
+  "author": "enhuizhu",
+  "homepage": "http://www.olmarket.co.uk",
   "devDependencies": {
     "electron-prebuilt": "^0.37.0"
   },
