--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "bootstrap": "~3.3.6",
     "angular": "~1.5.5",
     "jQuery": "~2.2.3",
-    "angular-bootstrap": "~1.3.2"
+    "angular-bootstrap": "~1.3.2",
+    "angular-route": "~1.5.5"
   }
 }
