--- a/bower.json
+++ b/bower.json
@@ -19,5 +19,8 @@
     "jQuery": "~2.2.3",
     "angular-bootstrap": "~1.3.2",
     "angular-route": "~1.5.5"
+  },
+  "devDependencies": {
+    "angular-mocks": "^1.5.8"
   }
 }
