--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "grunt-electron-installer": "^2.1.0"
   },
   "dependencies": {
-    "node-printer": "^1.0.2"
+    "escpos": "^2.4.11",
+    "node-printer": "^1.0.2",
+    "node-thermal-printer": "^2.0.0"
   }
 }
